# movei

./: Cargo.toml  README.md  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
api/dialect/: Cargo.toml
api/dialect/src/: lib.rs
datatest/: Cargo.toml
datatest/src/: lib.rs
dialect/libra/: Cargo.toml
dialect/libra/src/: lib.rs
movei-executor/: Cargo.toml
movei-executor/src/: change_set.rs  lib.rs  output_formatter.rs  state.rs  txn_cache.rs
movei-fmt/: Cargo.toml
movei-fmt/movei-fmt-test/: Cargo.toml
movei-fmt/movei-fmt-test/benches/: bench_fmt.rs
movei-fmt/movei-fmt-test/benches/stdlib/: Libra.move
movei-fmt/movei-fmt-test/src/: color_diff.rs  command.rs  lib.rs
movei-fmt/movei-fmt-test/tests/: testsuite.rs
movei-fmt/movei-fmt-test/tests/testsuites/: function.move  lang_items.move  module.move  script.move  script_with_comment.move
movei-fmt/movei-fmt-test/tests/testsuites/exp/: binary_op.move  if_else.move  pack.move
movei-fmt/movei-fmt-test/tests/testsuites/spec/: spec.move
movei-fmt/src/: comments.rs  lang_items.rs  lib.rs  pretty.rs
movei-fmt/tests/: testsuite.rs
movei-fmt/tests/testsuites/: script.move
movei-test/: Cargo.toml
movei-test/movei-libra-test/: Cargo.toml
movei-test/movei-libra-test/src/: lib.rs  move_test_compiler.rs
movei-test/src/: command.rs  command_parser.rs  lib.rs
movei-test/src/command_impl/: libra_command.rs  mod.rs
src/: build.rs  exec.rs  lib.rs  package.rs  resolver.rs  run.rs
src/example/modules/: hello_world.move
src/run/: change_set.rs  host_config.rs  state.rs
