[package]
name = "movei-executor"
version = "0.1.0"
authors = ["caojiafeng <funfriendcjf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow="1"
libra-types = "0.1.0"
move-core-types = "0.1.0"
move-vm-runtime = "0.1.0"
move-vm-types = "0.1.0"
vm = "0.1.0"