[package]
name = "movei-fmt"
version = "0.1.0"
authors = ["caojiafeng <funfriendcjf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[test]]
name = "testsuite"
harness = false

[dependencies]
im = "15.0"
itertools = "0.9"
anyhow="1.0"


move-lang = "0.0.1"
move-ir-types = "0.1.0"

[dev-dependencies]
difference = "2.0"

datatest = {path = "../datatest"}