[package]
name = "movei-libra-dialect"
version = "0.1.0"
authors = ["caojiafeng <funfriendcjf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dialect = {path = "../../api/dialect"}
stdlib = "0.1.0"
compiled-stdlib = "0.1.0"
move-core-types = "0.1.0"
move-vm-types = "0.1.0"
libra-types  = "0.1.0"
vm-genesis = "0.1.0"