[package]
name = "movei-fmt-test"
version = "0.1.0"
authors = ["nonsense <nonsense0202@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9"
anyhow="1.0"
move-lang = "0.0.1"
difference = "2.0"
#colored_diff = "0.2"
movei-fmt = {path = "../../movei-fmt"}
datatest = {path = "../../datatest"}
movei-test = {path = "../../movei-test"}

[[test]]
name = "testsuite"
harness = false

