[package]
name = "movei-libra-test"
version = "0.1.0"
authors = ["caojiafeng <funfriendcjf@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
tempfile = "3.1"
itertools = "0.9"

functional-tests = "0.1.0"
libra-crypto = "0.1.0"
libra-types = "0.1.0"
language-e2e-tests = "0.1.0"
move-lang = "0.0.1"

movei-test = {path = "../../movei-test"}
datatest = {path = "../../datatest"}
dialect = {path = "../../api/dialect"}
movei-libra-dialect = {path = "../../dialect/libra"}
